# courier-sprite

./: .gitignore  LICENSE.md  README.md  example_config.json  pyproject.toml
deploy/: README-deploy.md
deploy/config/: calendar_secret.json  config.json  courier-sprite.env  discord_secret.json
deploy/sbin/: courier-sprite-update  update-sprite
deploy/systemd/: courier-sprite.service
src/courier_sprite/: __init__.py  __main__.py  calendar_sprite.py  check_posts.py  discord_sprite.py  file_sprite.py  time_sprite.py
